# alpaca-trading-log

./: .eslintrc.json  .gitignore  LICENSE  package-lock.json  package.json  tsconfig.json
alpaca-gui-ts/: package-lock.json  package.json
alpaca-gui-ts/src/components/: TradesForm.tsx  TradesTable.tsx
alpaca-gui-ts/src/pages/: _app.js  index.tsx
alpaca-gui-ts/src/styles/: Dashboard.module.css  global.css
pages/: index.tsx
python-cli/: portfolio.py  pyproject.toml
src/components/: Dashboard.tsx  TradesForm.tsx  TradesTable.tsx
src/pages/: index.tsx
src/styles/: Dashboard.module.css  global.css
src/utils/: types.ts
